Table categorias {
    id int [pk, increment]
    nombre varchar(255)
    descripcion text
}
Table sucursales {
    id int [pk, increment]
    nombre varchar(255)
    direccion text
    telefono varchar(20)
    activo boolean [default: true]
}
Table productos {
    id int [pk, increment]
    categoria_id int [ref: > categorias.id]
    codigo varchar(100) [unique]
    nombre varchar(255)
    imagen varchar(255)
    descripcion text
    precio_compra decimal(10,2)
    precio_venta decimal(10,2)
    stock_minimo int
    stock_maximo int
    unidad_medida varchar(50)
    estado boolean [default: true]
}
Table proveedores {
   id int [pk, increment]
   empresa varchar(255)
   direccion varchar(255)
   contacto varchar(255)
   telefono varchar(20)
   email varchar(255)
}
Table lotes {
   id int [pk, increment]
   producto_id int [ref: > productos.id]
   proveedor_id int [ref: > proveedores.id]
   codigo_lote varchar(100) [unique]
   fecha_entrada date
   fecha_vencimiento date
   cantidad_inicial int [not null]
   cantidad_actual int [not null]
   precio_compra decimal(10,2) [not null]
   estado boolean [default: true]
}

Table Inventario_Sucursal_Lotes{
   id int [pk, increment]
   sucursal_id int [ref: > sucursales.id]
   lote_id int [ref: > lotes.id]
   cantidad_sucursal int [not null]
}
Table Movimientos_inventario{
   id int [pk, increment]
   producto_id int [ref: > productos.id]
   lote_id int [ref: > lotes.id]
   sucursal_id int [ref: > sucursales.id]
   tipo_movimiento varchar(50) // e.g., 'entrada', 'salida', 'ajuste'
   cantidad int
   fecha_movimiento timestamp [default: `now()`]
   observaciones text
}
Table Compras{
    id int [pk, increment]
    proveedor_id int [ref: > proveedores.id]
    fecha_compra timestamp [default: `now()`]
    total decimal(10,2)
    estado varchar()
    observaciones text

}
Table Detalle_Compras{
    id int [pk, increment]
    compra_id int [ref: > Compras.id]
    producto_id int [ref: > productos.id]
    lote_id int [ref: > lotes.id]
    cantidad int
    precio_unitario decimal(10,2)
    subtotal decimal(10,2)
}
